project wip with additional kfold comparisons

--- a/project_wip_dr.ipynb
+++ b/project_wip_dr.ipynb
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bb2c15dd",
+   "id": "75914ebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "307f97d9",
+   "id": "db0c247a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b1d606bd",
+   "id": "c461f80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e74e090c",
+   "id": "3bd41788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "78e27c25",
+   "id": "f775e733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e4fbb138",
+   "id": "d45261d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3e7e2b73",
+   "id": "6d555ba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "de9ed32a",
+   "id": "241630e6",
    "metadata": {
     "scrolled": true
    },
@@ -1676,7 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2e427deb",
+   "id": "3cd9e870",
    "metadata": {
     "scrolled": false
    },
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0a557028",
+   "id": "e775ad60",
    "metadata": {
     "scrolled": true
    },
@@ -1742,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "83f8f284",
+   "id": "200df8fb",
    "metadata": {
     "scrolled": false
    },
@@ -1776,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6add5d8b",
+   "id": "d65b049e",
    "metadata": {
     "scrolled": true
    },
@@ -1808,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e4a86c20",
+   "id": "9a141846",
    "metadata": {
     "scrolled": false
    },
@@ -1842,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "bd940084",
+   "id": "a893487a",
    "metadata": {
     "scrolled": true
    },
@@ -1874,7 +1874,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "cba893bd",
+   "id": "7401885d",
    "metadata": {
     "scrolled": false
    },
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3977f2cb",
+   "id": "132969bc",
    "metadata": {
     "scrolled": true
    },
@@ -1940,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a93faf5b",
+   "id": "678c60f0",
    "metadata": {
     "scrolled": false
    },
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "1391cfec",
+   "id": "b5a6f9da",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "60a8a0fd",
+   "id": "173bc294",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "af12ea4c",
+   "id": "cdbd6e1b",
    "metadata": {},
    "outputs": [
     {
@@ -2347,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "7241af44",
+   "id": "26c847b2",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "f0c0fb27",
+   "id": "334ebb56",
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +2931,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "398faed0",
+   "id": "5408460d",
    "metadata": {},
    "outputs": [
     {
@@ -3122,7 +3122,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "c5a94faf",
+   "id": "2d802340",
    "metadata": {},
    "outputs": [
     {
@@ -3263,7 +3263,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "55151354",
+   "id": "339034e3",
    "metadata": {},
    "outputs": [
     {
@@ -3383,7 +3383,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ea8176d1",
+   "id": "cf9f3fe9",
    "metadata": {},
    "outputs": [
     {
@@ -3967,7 +3967,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4ce7d3b1",
+   "id": "74e8c629",
    "metadata": {},
    "outputs": [
     {
@@ -4217,7 +4217,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "b67472eb",
+   "id": "6bd326d9",
    "metadata": {},
    "outputs": [
     {
@@ -4260,7 +4260,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "7b77bf06",
+   "id": "6149280b",
    "metadata": {},
    "outputs": [
     {
@@ -4497,7 +4497,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "257df79d",
+   "id": "616a2a41",
    "metadata": {},
    "outputs": [
     {
@@ -4540,7 +4540,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "46302c0e",
+   "id": "d2afdf0a",
    "metadata": {},
    "outputs": [
     {
@@ -4574,32 +4574,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "233b1404",
+   "execution_count": 132,
+   "id": "97fb6ae7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.72413793, 0.68965517, 0.65517241, 0.62068966])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(SVC, X_train, y_train, cv = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "401a13fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.65517241, 0.75862069, 0.62068966, 0.65517241])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(knn, X_train, y_train, cv = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "f3e52047",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/g3/kfw_0xts4c778bttx6jrkqm00000gn/T/ipykernel_75456/2863609966.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcross_val_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'lr' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cross_val_score(lm, X_train, y_train, cv = 4)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c588ef4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7538fde0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f76e999a",
+   "id": "77628483",
    "metadata": {},
    "outputs": [],
    "source": []
