Update final workbook

--- a/final_notebbok.ipynb
+++ b/final_notebbok.ipynb
@@ -2038,6 +2038,72 @@
     "pct_improvement = round(((76.67-47.01)/(47.01)*100), 2)\n",
     "print(f'Our 76.67% accuracy represent a {pct_improvement}% improvement from baseline')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Our 76.67% accuracy represent a 63.09% improvement from baseline\n",
+    "- This is a solid effort for a proof of concept project.\n",
+    "- Many algorithms were working at 95%-100% accuracy on the training set, but this was due to gross overfitting.\n",
+    "- Given out 140 README files was on the lower end of the spectum, having more READMES to train on would likely improve our models.\n",
+    "- Keep in mind - this model is only tuned and trained to work on the Apple READMES\n",
+    "  - It will likely perform well on future Apple uploads.\n",
+    "  - It will likely perform poorly on ant REAMDEs from other sources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Since we can't make Apple push more to their github, we could potentially look for a family of similar repositories to add to the training sets to increase the size of the corpus will likely increase performance.\n",
+    "- Some of the models that were overfit may prove useful or better than our current best performing model with continued hyperparameter tuning.\n",
+    "- There was an imbalance in the categories in training (47%/26%/16%/11%)\n",
+    "  - Some type of oversampeling technique may be helpful in improving models\n",
+    "  - We should look at the misclassified items in out final test and see what the actual language is in order to see if any of the 'other' langues are disproportionately responsible for mismatches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If you made it this far, thank you for your time and attention!"
+   ]
   }
  ],
  "metadata": {
