Update final notebook

--- a/final_notebbok.ipynb
+++ b/final_notebbok.ipynb
@@ -2087,7 +2087,7 @@
     "- Since we can't make Apple push more to their github, we could potentially look for a family of similar repositories to add to the training sets to increase the size of the corpus will likely increase performance.\n",
     "- Some of the models that were overfit may prove useful or better than our current best performing model with continued hyperparameter tuning.\n",
     "- There was an imbalance in the categories in training (47%/26%/16%/11%)\n",
-    "  - Some type of oversampeling technique may be helpful in improving models\n",
+    "  - Some type of oversampling technique may be helpful in improving models\n",
     "- We should look at the misclassified items in out final test and see what the actual language is in order to see if any of the 'other' langues are disproportionately responsible for mismatches."
    ]
   },
