Update the final notebook

--- a/final_notebbok.ipynb
+++ b/final_notebbok.ipynb
@@ -1993,26 +1993,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30, 9749)"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2088,7 +2068,8 @@
     "- Some of the models that were overfit may prove useful or better than our current best performing model with continued hyperparameter tuning.\n",
     "- There was an imbalance in the categories in training (47%/26%/16%/11%)\n",
     "  - Some type of oversampling technique may be helpful in improving models\n",
-    "- We should look at the misclassified items in out final test and see what the actual language is in order to see if any of the 'other' langues are disproportionately responsible for mismatches."
+    "- We should look at the misclassified items in out final test and see what the actual language is in order to see if any of the 'other' langues are disproportionately responsible for mismatches.\n",
+    "- Look at receiver operator curves and area under the curve for model performance evaluation."
    ]
   },
   {
