Update README and final notebook

--- a/jag_explore.ipynb
+++ b/jag_explore.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import re, os\n",
     "import unicodedata\n",
     "import json\n",
@@ -41,7 +42,6 @@
     "\n",
     "from wordcloud import WordCloud\n",
     "\n",
-    "import acquire\n",
     "import acquire_jg\n",
     "import prepare_jag\n",
     "\n",
