Fixed README dictionary table format

--- a/jag_explore.ipynb
+++ b/jag_explore.ipynb
@@ -2564,6 +2564,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "| Feature                 | Datatype                         | Definition                                                 |\n",
+    "|:------------------------|:---------------------------------|:-----------------------------------------------------------|\n",
+    "| repo                    | 147 non-null: object             | The name of the scraped repository                         |\n",
+    "| language                | 146 non-null: object             | The predominant programming language used in the repository|\n",
+    "| target                  | 147 non-null: object             | Target variable modified to include the most common languages and lumping less occurring languages into category 'other'.  |\n",
+    "| original                | 147 non-null: object             | Original content of `README.md` file         \n",
+    "| clean                   | 147 non-null: object             | The cleaned version of the readme (lowercase, normalize unicode, removed anything not a letter, number, whitespace, or single quote, tokenized, stopwords removed)                       |\n",
+    "| stemmed                 | 147 non-null: object             | The cleaned text stemmed readme                 |\n",
+    "| lemmatized              | 147 non-null: object             | The cleaned text lemmatized             |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Modeling"
    ]
   },
